--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf ./dist && tsc",
+    "prestart": "npm run build",
+    "start": "node dist/index.js",
+    "prepare": "husky install",
     "test": "jest",
     "lint": "tsc && eslint --ext .ts ./src",
     "lint-fix": "tsc && eslint --fix --ext .ts ./src",
@@ -13,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
@@ -22,11 +27,13 @@
     "husky": "^8.0.3",
     "jest": "^29.6.2",
     "prettier": "^3.0.0",
+    "rimraf": "^5.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
