Adding node version. Adding knex, migrations, seeds.

--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "lint": "eslint --ext .ts ./src",
     "lint-fix": "npm run prelint && eslint --fix --ext .ts ./src",
     "check-types": "tsc --noEmit",
-    "test": "jest"
+    "test": "jest",
+    "knex:migrate:make": "knex --knexfile ./src/app/db/knexfile.ts migrate:make",
+    "knex:migrate:latest": "knex --knexfile ./src/app/db/knexfile.ts migrate:latest",
+    "knex:migrate:rollback": "knex --knexfile ./src/app/db/knexfile.ts migrate:rollback",
+    "knex:seed:make": "knex --knexfile ./src/app/db/knexfile.ts seed:make",
+    "knex:seed:run": "knex --knexfile ./src/app/db/knexfile.ts seed:run"
   },
   "keywords": [],
   "author": "vladimir-sf",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
@@ -34,7 +41,10 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "knex": "^2.5.1",
+    "pg": "^8.11.1"
   }
 }
