--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "knex": "^2.5.1",
+    "objection": "^3.1.1",
     "pg": "^8.11.1"
   }
 }
