--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepare": "echo 'Adding husky hooks' && husky install",
+    "postinstall": "echo 'Adding husky hooks' && husky install",
     "build": "rimraf ./dist && tsc",
     "prestart": "echo 'Preparing project before start' && npm run build",
     "start": "node dist/index.js",
@@ -24,7 +24,7 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
@@ -41,11 +41,16 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "knex": "^2.5.1",
     "objection": "^3.1.1",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "save": "^2.9.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
