--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "knex": "^2.5.1",
     "objection": "^3.1.1",
     "pg": "^8.11.1",
