--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
     "knex": "^2.5.1",
     "objection": "^3.1.1",
     "pg": "^8.11.1",
