Fixing .env.example file.

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ PORT=3000
 
 # DB
 DB_HOST="localhost"
-DB_PORT=8888
+# 5432 is the default postgres port
+DB_PORT=5432
 DB_NAME="db"
 DB_USER="user"
 DB_PASSWORD="password"
